feat: add SEO meta tags and OG image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Noto+Serif+KR:wght@300;400;500;600&display=swap"
     rel="stylesheet">
   <title>TO BE FAMILY - Family Meeting</title>
+  <meta name="description" content="가족이 되어가는 시간, 우리만의 대화 카드. 결혼 준비, 육아, 가치관에 대해 깊이 있는 대화를 나눠보세요." />
+  <meta name="keywords" content="가족회의, 대화카드, 결혼준비, 육아대화, 부부대화, 가치관질문, 커플앱" />
+  <meta name="author" content="TO BE FAMILY" />
+
+  <!-- Open Graph (KakaoTalk, Facebook, etc.) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://to-be-family.vercel.app/" />
+  <meta property="og:title" content="TO BE FAMILY - 가족이 되어가는 시간" />
+  <meta property="og:description" content="서로 다른 우리가 만나 하나의 가족이 되는 과정. 진지하지만 따뜻한 대화를 시작해보세요." />
+  <meta property="og:image" content="https://to-be-family.vercel.app/og-image.png" />
+  <meta property="og:locale" content="ko_KR" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="TO BE FAMILY - 가족이 되어가는 시간" />
+  <meta name="twitter:description" content="결혼 준비, 육아, 가치관. 우리 가족을 위한 깊이 있는 대화 가이드." />
+  <meta name="twitter:image" content="https://to-be-family.vercel.app/og-image.png" />
 </head>
 
 <body class="font-sans text-stone-900 bg-stone-50">
